[package]
name = "AOC_2015"
version = "0.1.0"
edition = "2021"

[dependencies]
md5 = "0.7.0"
regex = "1.9.3"
itertools = "0.11.0"

[[bin]]
name = "q1"
path = "src/q1.rs"

[[bin]]
name = "q2"
path = "src/q2.rs"

[[bin]]
name = "q3"
path = "src/q3.rs"

[[bin]]
name = "q4"
path = "src/q4.rs"

[[bin]]
name = "q5"
path = "src/q5.rs"

[[bin]]
name = "q6"
path = "src/q6.rs"

[[bin]]
name = "q7"
path = "src/q7.rs"

[[bin]]
name = "q8"
path = "src/q8.rs"

[[bin]]
name = "q9"
path = "src/q9.rs"